--- a/functions/templates/reset-password.ejs
+++ b/functions/templates/reset-password.ejs
@@ -14,7 +14,7 @@
     	<meta name="format-detection" content="date=no">
     	<meta name="format-detection" content="address=no">
     	<meta name="format-detection" content="telephone=no">
-        <title>WavePilots | Welcome</title>
+        <title>WavePilots | Reset password</title>
         <style media="screen">
             *, *::after, *::before {
                 -webkit-box-sizing: border-box;
@@ -56,28 +56,29 @@
 							<tbody>
 								<tr>
 									<td style="padding: 0;" align="center" >
-										<img src="https://firebasestorage.googleapis.com/v0/b/wavepilots-67f1c.appspot.com/o/images%2Ftemplate%2Fheader.png?alt=media&token=5e483cba-b2a4-4959-937e-e13c7bc23166" style="width: 100%; height: auto;" width="600" height="150">
+										<img src="https://firebasestorage.googleapis.com/v0/b/wavepilots-67f1c.appspot.com/o/images%2Ftemplate%2Fheader.png?alt=media&token=5e483cba-b2a4-4959-937e-e13c7bc23166" style="width: 100%; height: auto;" width="600" height="150" alt="">
 									</td>
 								</tr>
 								<tr>
 									<td style="padding: 0;" align="center" >
-										<p style="font-size: 24px">Welcome to WavePilots.</p>
+										<p style="font-size: 24px">Ouch, forgotten password?</p>
 									</td>
 								</tr>
 								<tr>
 									<td style="padding: 20px; border: solid 1px; border-radius: 24px;" >
 										<p>Hello</p>
 										<p>
-											It’s great to having you on board. Please don’t forget to confirm your
-											email before the next 72 hrs. in order to keep your account fully
-											activated, otherwise you will not be able to continue the experience.
+											It’ seems you forgot your password. No worries, there’s a way to reset
+											a new password for you. Because our concern to keep privacy on top
+											we can not resend your current password via email but you can choose
+											another one. Please, follow link below to get this done.
 										</p>
-										<p style="text-align: center;"><a href='<%= verificationLink %>' style="padding:4px 8px; border:solid 1px; border-radius: 20px">CONFIRM EMAIL</a></p>
+										<p style="text-align: center;" align="center"><a href='%LINK%' style="padding:4px 8px; border:solid 1px; border-radius: 20px">RESET PASSWORD</a></p>
 									</td>
 								</tr>
 								<tr>
-									<td>
-										<table style="width: 100%;">
+									<td align="center">
+										<table style="width: 100%;" width="100%">
 											<tbody>
 												<tr>
 													<td colspan="4" align='center'>
@@ -85,20 +86,20 @@
 													</td>
 												</tr>
 												<tr>
-													<td style="width: 25%;" class="hide-in-phone">
+													<td style="width: 25%;" width="25%" class="hide-in-phone">
 														<img src="https://firebasestorage.googleapis.com/v0/b/wavepilots-67f1c.appspot.com/o/images%2Ftemplate%2Fdot.png?alt=media&token=350db360-a9dc-483d-9f32-9f7c62f22afe" width="16" height="16">
 													</td>
-													<td style="width: 25%;" align='right'>
+													<td style="width: 25%;" width="25%" align='right'>
 														<a href="#" target="_blank">
 															<img src="https://firebasestorage.googleapis.com/v0/b/wavepilots-67f1c.appspot.com/o/images%2Ftemplate%2Fios-download.png?alt=media&token=1ab58da4-4226-4e49-b0d0-719d1acb489b"  width="132" height="40">
 														</a>
 													</td>
-													<td style="width: 25%;" align='left'>
+													<td style="width: 25%;" width="25%" align='left'>
 														<a href="#" target="_blank">
 															<img src="https://firebasestorage.googleapis.com/v0/b/wavepilots-67f1c.appspot.com/o/images%2Ftemplate%2Fandroid-download.png?alt=media&token=1cb6e055-4599-48e8-96be-053f23d5e317" width="132" height="40">
 														</a>
 													</td>
-													<td align="right" style="width: 25%;" class="hide-in-phone">
+													<td width="25%" align="right" style="width: 25%;" class="hide-in-phone">
 														<img src="https://firebasestorage.googleapis.com/v0/b/wavepilots-67f1c.appspot.com/o/images%2Ftemplate%2Fwave.png?alt=media&token=41c7f03f-fdea-4215-b846-03e6ced4dbec" width="96" height="16">
 													</td>		
 												</tr>
