usermgmt custom email action handler

--- a/functions/templates/reset-password.ejs
+++ b/functions/templates/reset-password.ejs
@@ -73,7 +73,7 @@
 											we can not resend your current password via email but you can choose
 											another one. Please, follow link below to get this done.
 										</p>
-										<p style="text-align: center;" align="center"><a href='%LINK%' style="padding:4px 8px; border:solid 1px; border-radius: 20px">RESET PASSWORD</a></p>
+										<p style="text-align: center;" align="center"><a href='<%= resetLink %>' style="padding:4px 8px; border:solid 1px; border-radius: 20px">RESET PASSWORD</a></p>
 									</td>
 								</tr>
 								<tr>
