--- a/src/app/home/waver-list/waver-list.component.html
+++ b/src/app/home/waver-list/waver-list.component.html
@@ -22,6 +22,7 @@
                                     <th calss="col-md-1">Earned</th>
                                     <th calss="col-md-1">QR shared</th>
                                     <th calss="col-md-1">Waves</th>
+                                    <th calss="col-md-1">-</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -38,6 +39,18 @@
                                     <td>$ {{user.commission_earned}}</td>
                                     <td>{{user.qr_shared_count}}</td>
                                     <td>{{user.joined_waves_count}}</td>
+                                    <td>
+                                        <button 
+                                            [disabled]="this.loading" 
+                                            class="btn btn-danger btn-xs" 
+                                            rel="tooltip" 
+                                            title="Delete user" 
+                                            type="button"
+                                            (click)="onDeleteUser(user)"
+                                        >
+                                            <i class="material-icons">delete</i>
+                                        </button>
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
