--- a/src/app/home/pilot-list/pilot-list.component.html
+++ b/src/app/home/pilot-list/pilot-list.component.html
@@ -21,6 +21,7 @@
                                     <th calss="col-md-1">Payout</th>
                                     <th calss="col-md-1">QR scanned</th>
                                     <th calss="col-md-1">Wavers</th>
+                                    <th calss="col-md-1">-</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -36,6 +37,30 @@
                                     <td>$ {{user.commission_payout}}</td>
                                     <td>{{user.qr_scanned_count}}</td>
                                     <td>{{user.wavers_count}}</td>
+                                    <td>
+                                        <button 
+                                            *ngIf="user.is_disabled"
+                                            [disabled]="this.loading" 
+                                            class="btn btn-danger btn-xs" 
+                                            rel="tooltip" 
+                                            title="Enable user" 
+                                            type="button"
+                                            (click)="onEnableUser(user)"
+                                        >
+                                            <i class="material-icons">check</i>
+                                        </button>
+                                        <button 
+                                            *ngIf="!user.is_disabled"
+                                            [disabled]="this.loading" 
+                                            class="btn btn-danger btn-xs" 
+                                            rel="tooltip" 
+                                            title="Disable user" 
+                                            type="button"
+                                            (click)="onDisableUser(user)"
+                                        >
+                                            <i class="material-icons">block</i>
+                                        </button>
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
