reset password design

--- a/src/app/usermgmt/reset-password/reset-password.component.html
+++ b/src/app/usermgmt/reset-password/reset-password.component.html
@@ -1,38 +1,72 @@
-<div class="main-content card-center">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-header" data-background-color="green">
-                        <h4 class="title">Reset Password</h4>
+<div class="my-container">
+    <div>
+        <img src="assets/img/header.png"  style="width: 100%; height: auto;">
+    </div>
+    <div style="margin-top: 20px">
+        <div class="card">
+            <div class="card-header" data-background-color="green">
+                <h4 class="title">Reset Password</h4>
+            </div>
+            <div class="card-content">
+                <form [formGroup]="form" (ngSubmit)="onSubmit(form)">
+                    <div class="row">
+                        <div class="col-md-12 text-input-box">
+                            <div class="form-group form-black label-floating is-empty">
+                                <label class="control-label">Password</label>
+                                <input formControlName="password" type="password" class="form-control" >
+                            </div>
+                        </div>
                     </div>
-                    <div class="card-content">
-                      <form [formGroup]="form" (ngSubmit)="onSubmit(form)">
-                          <div class="row">
-                              <div class="col-md-12 text-input-box">
-                                  <div class="form-group form-black label-floating is-empty">
-                                      <label class="control-label">Password</label>
-                                      <input formControlName="password" type="password" class="form-control" >
-                                  </div>
-                              </div>
-                          </div>
 
-                          <div class="row">
-                              <div class="col-md-12 text-input-box">
-                                  <div class="form-group form-black label-floating is-empty">
-                                      <label class="control-label">Confirm Password</label>
-                                      <input formControlName="confirmPassword" type="password" class="form-control" >
-                                  </div>
-                              </div>
-                          </div>
-                          <div class="form-buttons text-center">
-                              <button [disabled]="!form.valid || loading" type="submit" class="btn btn-success login">Reset</button>
-                          </div>
-                          <div class="clearfix"></div>
-                      </form>
+                    <div class="row">
+                        <div class="col-md-12 text-input-box">
+                            <div class="form-group form-black label-floating is-empty">
+                                <label class="control-label">Confirm Password</label>
+                                <input formControlName="confirmPassword" type="password" class="form-control" >
+                            </div>
+                        </div>
                     </div>
-                </div>
+                    <div class="form-buttons text-center">
+                        <button [disabled]="!form.valid || loading" type="submit" class="btn btn-success login">Reset</button>
+                    </div>
+                    <div class="clearfix"></div>
+                </form>
             </div>
         </div>
+    </div>
+    <div style="flex: 1"></div>
+    <div class="footer">
+        <table style="width: 100%;">
+            <tbody>
+                <tr>
+                    <td colspan="4" align='center'>
+                        <p style="font-size: 20px; font-weight: bold">Download the app</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="width: 25%;" class="hide-in-phone">
+                        <img src="assets/img/dot.png" width="16" height="16">
+                    </td>
+                    <td style="width: 25%;" align='right'>
+                        <a href="#" target="_blank">
+                            <img src="assets/img/ios-download.png"  width="132" height="40">
+                        </a>
+                    </td>
+                    <td style="width: 25%;" align='left'>
+                        <a href="#" target="_blank">
+                            <img src="assets/img/android-download.png" width="132" height="40">
+                        </a>
+                    </td>
+                    <td align="right" style="width: 25%;" class="hide-in-phone">
+                        <img src="assets/img/wave.png" width="96" height="16">
+                    </td>		
+                </tr>
+                <tr>
+                    <td colspan="4" align='center'>
+                        <p style="margin: 10px 0px;">© WavePilots. 2019</p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
