--- a/src/app/usermgmt/display-message/display-message.component.css
+++ b/src/app/usermgmt/display-message/display-message.component.css
@@ -4,6 +4,8 @@
     max-width: 600px;
     height: 100vh;
     padding: 50px 0px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .header-img {
