--- a/src/app/usermgmt/display-message/display-message.component.html
+++ b/src/app/usermgmt/display-message/display-message.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <img src="https://firebasestorage.googleapis.com/v0/b/wavepilots-67f1c.appspot.com/o/images%2Ftemplate%2Fheader.png?alt=media&token=5e483cba-b2a4-4959-937e-e13c7bc23166" style="width: 100%; height: auto;">
+<div class="my-container">
+    <img src="assets/img/header.png" style="width: 100%; height: auto;">
     <p class="title">{{title}}</p>
     <div class="message-container">
         <p class="message">{{message}}</p>
@@ -15,20 +15,20 @@
                 </tr>
                 <tr>
                     <td style="width: 25%;" class="hide-in-phone">
-                        <img src="https://firebasestorage.googleapis.com/v0/b/wavepilots-67f1c.appspot.com/o/images%2Ftemplate%2Fdot.png?alt=media&token=350db360-a9dc-483d-9f32-9f7c62f22afe" width="16" height="16">
+                        <img src="assets/img/dot.png" width="16" height="16">
                     </td>
                     <td style="width: 25%;" align='right'>
                         <a href="#" target="_blank">
-                            <img src="https://firebasestorage.googleapis.com/v0/b/wavepilots-67f1c.appspot.com/o/images%2Ftemplate%2Fios-download.png?alt=media&token=1ab58da4-4226-4e49-b0d0-719d1acb489b"  width="132" height="40">
+                            <img src="assets/img/ios-download.png"  width="132" height="40">
                         </a>
                     </td>
                     <td style="width: 25%;" align='left'>
                         <a href="#" target="_blank">
-                            <img src="https://firebasestorage.googleapis.com/v0/b/wavepilots-67f1c.appspot.com/o/images%2Ftemplate%2Fandroid-download.png?alt=media&token=1cb6e055-4599-48e8-96be-053f23d5e317" width="132" height="40">
+                            <img src="assets/img/android-download.png" width="132" height="40">
                         </a>
                     </td>
                     <td align="right" style="width: 25%;" class="hide-in-phone">
-                        <img src="https://firebasestorage.googleapis.com/v0/b/wavepilots-67f1c.appspot.com/o/images%2Ftemplate%2Fwave.png?alt=media&token=41c7f03f-fdea-4215-b846-03e6ced4dbec" width="96" height="16">
+                        <img src="assets/img/wave.png" width="96" height="16">
                     </td>		
                 </tr>
                 <tr>
