--- a/src/app/usermgmt/reset-password/reset-password.component.css
+++ b/src/app/usermgmt/reset-password/reset-password.component.css
@@ -1,20 +1,24 @@
-.card-center {
-    width: 100%;
-    height: 80%;
+.my-container {
     display: flex;
-    align-items: center;
-    position: absolute;
+    flex-direction: column;
+    max-width: 600px;
+    height: 100vh;
+    padding: 50px 0px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
-.card-center .card {
+.card {
     width: 480px !important;
+    margin-left: 60px;
+    margin-right: 60px;
 }
 
-.card-center .card-content {
+.card-content {
     padding: 48px 20px !important;
 }
 
-.card-center .card-content button .login {
+.card-content button .login {
     width: 160px;
     left: 50%;
     margin-left: -80px;
