change green to blue on reset-password screen

--- a/src/app/usermgmt/reset-password/reset-password.component.html
+++ b/src/app/usermgmt/reset-password/reset-password.component.html
@@ -4,7 +4,7 @@
     </div>
     <div style="margin-top: 20px">
         <div class="card">
-            <div class="card-header" data-background-color="green">
+            <div class="card-header" data-background-color="#3184ED">
                 <h4 class="title">Reset Password</h4>
             </div>
             <div class="card-content">
@@ -27,7 +27,7 @@
                         </div>
                     </div>
                     <div class="form-buttons text-center">
-                        <button [disabled]="!form.valid || loading" type="submit" class="btn btn-success login">Reset</button>
+                        <button [disabled]="!form.valid || loading" type="submit" class="btn btn-success login" style="background-color: #3184ED">Reset</button>
                     </div>
                     <div class="clearfix"></div>
                 </form>
