--- a/src/app/usermgmt/reset-password/reset-password.component.html
+++ b/src/app/usermgmt/reset-password/reset-password.component.html
@@ -4,7 +4,7 @@
     </div>
     <div style="margin-top: 20px">
         <div class="card">
-            <div class="card-header" data-background-color="#3184ED">
+            <div class="card-header" style="background-color: #3184ED">
                 <h4 class="title">Reset Password</h4>
             </div>
             <div class="card-content">
