reset password in mobile phone

--- a/src/app/usermgmt/reset-password/reset-password.component.css
+++ b/src/app/usermgmt/reset-password/reset-password.component.css
@@ -3,15 +3,15 @@
     flex-direction: column;
     max-width: 600px;
     height: 100vh;
-    padding: 50px 0px;
+    padding: 50px 20px;
     margin-right: auto;
     margin-left: auto;
 }
 
 .card {
-    width: 480px !important;
-    margin-left: 60px;
-    margin-right: 60px;
+    width: 80% !important;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .card-content {
@@ -29,15 +29,7 @@ div.text-input-box {
     padding: 0px 50px !important;
     margin: 0 !important;
 }
-/*button.login {
-            margin-top: 20px;
-            margin-bottom: 10px;
-            background: forestgreen;
-            color: white;
-            align-content: center;
-        }
 
-.form-group {
-    padding-bottom: 7px;
-    margin: 10px 0 0 0;
-}*/
+@media (max-width: 480px) {
+    .hide-in-phone {display: none}
+}
