fix some misspelling

--- a/functions/templates/reset-password.ejs
+++ b/functions/templates/reset-password.ejs
@@ -68,10 +68,10 @@
 									<td style="padding: 20px; border: solid 1px; border-radius: 24px;" >
 										<p>Hello</p>
 										<p>
-											It’ seems you forgot your password. No worries, there’s a way to reset
-											a new password for you. Because our concern to keep privacy on top
-											we can not resend your current password via email but you can choose
-											another one. Please, follow link below to get this done.
+											It seems you forgot your password. No worries, there’s a way to set up
+											a new password for you. Because our concern is privacy on top
+											we cannot resend your current password via email, but you can choose
+											another one. Please follow the link below.
 										</p>
 										<p style="text-align: center;" align="center"><a href='<%= resetLink %>' style="padding:4px 8px; border:solid 1px; border-radius: 20px">RESET PASSWORD</a></p>
 									</td>
