--- a/functions/templates/welcome.ejs
+++ b/functions/templates/welcome.ejs
@@ -68,7 +68,7 @@
 									<td style="padding: 20px; border: solid 1px; border-radius: 24px;" >
 										<p>Hello</p>
 										<p>
-											It’s great to having you on board. Please don’t forget to confirm your
+											It’s great to have you on board. Please don’t forget to confirm your
 											email before the next 72 hrs. in order to keep your account fully
 											activated, otherwise you will not be able to continue the experience.
 										</p>
