fix some misspelling and mobile responsive for display message screen

--- a/functions/templates/reset-password.ejs
+++ b/functions/templates/reset-password.ejs
@@ -69,7 +69,7 @@
 										<p>Hello</p>
 										<p>
 											It seems you forgot your password. No worries, there’s a way to set up
-											a new password for you. Because our concern is privacy on top
+											a new password for you. Because our concern is privacy 
 											we cannot resend your current password via email, but you can choose
 											another one. Please follow the link below.
 										</p>
