--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,9 +1,9 @@
 <div class="logo">
     <a href="/" class="logo-text">
-        WavePilots
+        <img src="assets/img/logo_with_title.png"  style="width: 200px; height: auto;">
     </a>
 </div>
-<div class="sidebar-wrapper">
+<div class="sidebar-wrapper" style="height: calc(100vh - 135px)">
     <div class="nav-container">
         <ul class="nav">
             <li *ngFor="let menuItem of menuItems" routerLinkActive="active">
