--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar" data-color='red' data-image="">
+<div class="sidebar" data-color='blue' data-image="">
     <app-sidebar></app-sidebar>
     <div class="sidebar-background" style="background-image: url(../assets/img/sidebar-4.jpg)"></div>
 </div>
