--- a/src/app/home/issue-list/issue-list.component.html
+++ b/src/app/home/issue-list/issue-list.component.html
@@ -3,7 +3,7 @@
         <div class="row">            
             <div class="col-md-12">
                 <div class="card card-plain">
-                    <div class="card-header" data-background-color="red">
+                    <div class="card-header" style="background-color: #3184ED">
                         <h4 class="title">
                             Issue List
                         </h4>
@@ -14,6 +14,7 @@
                             <thead>
                                 <tr>
                                     <th class="col-md-1">No</th>
+                                    <th class="col-md-2">User Type</th>
                                     <th class="col-md-2">Name</th>
                                     <th class="col-md-2">Email</th>
                                     <th calss="col-md-5">Issue</th>
@@ -22,6 +23,7 @@
                             <tbody>
                                 <tr *ngFor="let issue of issueList, let i = index">
                                     <td>{{i+1}}</td>
+                                    <td>{{issue.user_type}}</td>
                                     <td>{{issue.first_name}} {{issue.last_name}}</td>
                                     <td>{{issue.email}}</td>
                                     <td>{{issue.issue}}</td>
