--- a/src/app/home/wave-list/wave-list.component.html
+++ b/src/app/home/wave-list/wave-list.component.html
@@ -3,7 +3,7 @@
         <div class="row">            
             <div class="col-md-12">
                 <div class="card card-plain">
-                    <div class="card-header" data-background-color="red">
+                    <div class="card-header" style="background-color: #3184ED">
                         <h4 class="title">
                             Wave List
                         </h4>
