--- a/src/assets/css/material-dashboard.css
+++ b/src/assets/css/material-dashboard.css
@@ -649,7 +649,7 @@ h2.title {
 }
 .sidebar[data-color="blue"] .moving-tab,
 .off-canvas-sidebar[data-color="blue"] .moving-tab {
-  background-color: #00bcd4;
+  background-color: #3184ED;
   box-shadow: 0 12px 20px -10px rgba(0, 188, 212, 0.28), 0 4px 20px 0px rgba(0, 0, 0, 0.12), 0 7px 8px -5px rgba(0, 188, 212, 0.2);
 }
 .sidebar[data-color="green"] .moving-tab,
