--- a/src/app/home/pilot-list/pilot-list.component.html
+++ b/src/app/home/pilot-list/pilot-list.component.html
@@ -13,11 +13,20 @@
                         <table class="table table-hover">
                             <thead>
                                 <tr>
-                                    <th class="col-md-1">No</th>
-                                    <th class="col-md-1">Photo</th>
-                                    <th class="col-md-2">Name</th>
-                                    <th class="col-md-2">Email</th>
-                                    <th class="col-md-2">Phone Number</th>
+                                    <th>No</th>
+                                    <th>Photo</th>
+                                    <th class="col-md-2">
+                                        <span href="#">Name</span>
+                                        <input type="text" name="name" (keyup)="onFilter($event)"/>
+                                    </th>
+                                    <th class="col-md-2">
+                                        <span href="#">Email</span>
+                                        <input type="text" name="email" (keyup)="onFilter($event)"/>
+                                    </th>
+                                    <th class="col-md-2">
+                                        <span href="#">Phone Number</span>
+                                        <input type="text" name="phone_number" (keyup)="onFilter($event)"/>
+                                    </th>
                                     <th calss="col-md-1">Membership</th>
                                     <th calss="col-md-1">Payout</th>
                                     <th calss="col-md-1">QR scanned</th>
@@ -26,13 +35,13 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let user of userList, let i = index">
+                                <tr *ngFor="let user of filteredUserList, let i = index">
                                     <td>{{i+1}}</td>
                                     <td>
                                         <img class="img-circle img-container" [src]="user.photo_download_url" alt="User Photo">
                                     </td>
                                     <!--<td><a [routerLink]="['/home/user/', 'detail', user.uid]">{{user.Username}}</a></td>-->
-                                    <td>{{user.first_name}} {{user.last_name}}</td>
+                                    <td>{{user.name}}</td>
                                     <td>{{user.email}}</td>
                                     <td>{{user.phone_number}}</td>
                                     <td>{{user.membership}}</td>
