--- a/src/app/home/wave-list/wave-list.component.html
+++ b/src/app/home/wave-list/wave-list.component.html
@@ -31,7 +31,7 @@
                                         <span href="#">Wide Type</span>
                                         <input type="text" name="wide_type" (keyup)="onFilter($event)"/>
                                     </th>
-                                    <th class="col-md-2" width="400">Bio</th>
+                                    <th class="col-md-2">Bio</th>
                                     <th class="col-md-2">Conditions</th>
                                     <th class="col-md-2">Deal for wavers</th>
                                     <th class="col-md-1">Wavers</th>
