reset password screen mobile response

--- a/src/app/usermgmt/reset-password/reset-password.component.css
+++ b/src/app/usermgmt/reset-password/reset-password.component.css
@@ -32,4 +32,9 @@ div.text-input-box {
 
 @media (max-width: 480px) {
     .hide-in-phone {display: none}
+    .card {
+        width: 100% !important;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
 }
