reset password screen mobile response

--- a/src/app/usermgmt/reset-password/reset-password.component.css
+++ b/src/app/usermgmt/reset-password/reset-password.component.css
@@ -37,4 +37,8 @@ div.text-input-box {
         margin-left: 0px;
         margin-right: 0px;
     }
+    div.text-input-box {
+        padding: 0px 20px !important;
+        margin: 0 !important;
+    }
 }
