reset password screen mobile response

--- a/src/app/usermgmt/reset-password/reset-password.component.css
+++ b/src/app/usermgmt/reset-password/reset-password.component.css
@@ -37,6 +37,9 @@ div.text-input-box {
         margin-left: 0px;
         margin-right: 0px;
     }
+    .card-content {
+        padding: 28px 20px !important;
+    }
     div.text-input-box {
         padding: 0px 20px !important;
         margin: 0 !important;
